--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="content">
     </div>
 
-    <script type="text/javascript" src="./dist/app.min.js"></script>
+    <script type="text/javascript" src="./dist/app.min.js?2015-04-06"></script>
 
     <!-- <script type="text/javascript" src="./bundle.js"></script> -->
 </body>
