--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>React Time Picker</title>
+    <title>A carefullt crafted time picker for React</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="./node_modules/react/dist/react-with-addons.js"></script>
@@ -20,7 +20,7 @@
     <div id="content">
     </div>
 
-    <script type="text/javascript" src="./dist/app.min.js?2015-04-06"></script>
+    <script type="text/javascript" src="./dist/app.min.js?2015-04-08"></script>
 
     <!-- <script type="text/javascript" src="./bundle.js"></script> -->
 </body>
